components/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    spec:
      containers:
        - name: app
          image: "linuxserver/sabnzbd:4.0.1"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /data
            - name: usenet
              mountPath: /usenet
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data-pvc
        - name: usenet
          hostPath:
            path: /media/videos/import/usenet
            type: Directory
